[gd_scene load_steps=16 format=3 uid="uid://b84kvpmv4qfen"]

[ext_resource type="Script" path="res://objects/generic/crate.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bqoyecffeimxb" path="res://sprites/objects/crate/1/crate008.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d36l0g4j08abe" path="res://sprites/objects/crate/1/crate001.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cusoymqg6kjnq" path="res://sprites/objects/crate/1/crate005.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c6md4d1d6xclh" path="res://sprites/objects/crate/1/crate006.png" id="5"]
[ext_resource type="Texture2D" uid="uid://d154pqg5abcd3" path="res://sprites/objects/crate/1/crate003.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dsmv6ws2gmqid" path="res://sprites/objects/crate/1/crate004.png" id="7"]
[ext_resource type="Texture2D" uid="uid://dfw7q4hl5drfv" path="res://sprites/objects/crate/1/crate002.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dpa3fkaomg7c8" path="res://sprites/objects/crate/1/crate007.png" id="9"]

[sub_resource type="PhysicsMaterial" id="1"]
absorbent = true

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": false,
"name": &"Break",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(20, 17)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(20, 21.5)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(20, 26)

[sub_resource type="RectangleShape2D" id="7"]
size = Vector2(27.5, 25.75)

[node name="Crate" type="RigidBody2D"]
collision_layer = 256
collision_mask = 257
physics_material_override = SubResource("1")
contact_monitor = true
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("2")
animation = &"Idle"

[node name="CollisionFront" type="CollisionShape2D" parent="."]
position = Vector2(10, 0)
scale = Vector2(2, 2)
shape = SubResource("3")

[node name="CollisionStack" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(10, 4.5)
scale = Vector2(2, 2)
shape = SubResource("5")
disabled = true

[node name="CollisionBack" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(10, 9)
scale = Vector2(2, 2)
shape = SubResource("6")
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2.5, -0.75)
scale = Vector2(2, 2)
shape = SubResource("7")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
